--- a/src/index.css
+++ b/src/index.css
@@ -54,21 +54,33 @@ label {
     padding-right: 8px;
 }
 .namecell { 
-    width: 40%;
+    width: 35%;
 }
 .gradecell { 
     width: 20%;
 }
 
 .unitcell { 
-    width: 20%;
+    width: 15%;
 }
 
+.checkcell { 
+    width: 5%; 
+}
 
 .titler { 
     text-align: center;
     margin-bottom: 16px;
     font-weight: bold;
+}
+.listelem { 
+    margin: auto;
+    align-self: center;
+    text-align: left;
+    font-weight: normal;
+    font-size: 14px;
+    width: 60%;
+    padding-bottom: 4%;
 }
 .textalign { 
     text-align: center;
